<resources>
    <string name="app_name">CastCompass</string>
    <string name="introduza_o_username">Introduza o username</string>
    <string name="introduza_o_ip">Introduza o ip</string>
    <string name="introduza_a_password">Introduza a password</string>
    <string name="login">Login</string>
    <string name="ndOpen">ndOpen</string>
    <string name="ndClose">ndClose</string>
    <string name="register">register</string>
    <string name="introduza_a_password_repetir">introduza a password outra vez</string>
    <string name="nome">Nome:</string>
    <string name="marca">Marca:</string>
    <string name="preco">Preço:</string>
    <string name="stock">Stock:</string>
    <string name="descricao">Descrição</string>
    <string name="categoria">Categoria:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrar_no_server">Entrar no Server</string>
    <string name="product_name">Product Name</string>
    <string name="stock_quantity_0">Stock Quantity: 0</string>
    <string name="price_0_00">Price: 0.00€</string>
    <string name="descri_o">Descrição:</string>
    <string name="description">Description:</string>
    <string name="adicionar_aos_favoritos">Adicionar aos Favoritos</string>
    <string name="comprar">Comprar</string>
    <string name="IPServidor">172.22.21.205</string>
    <string name="Default_User">ze</string>
    <string name="Default_Password">12345678</string>
    <string name="entrar_como_visitante">Entrar como Visitante</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="data_de_nascimento">Data de Nascimento:</string>
    <string name="g_nero">Género:</string>
    <string name="nomePerfil">Nome:</string>
    <string name="morada">Morada:</string>
    <string name="telem_vel">Telemóvel:</string>
    <string name="nif">NIF:</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="apagar_perfil">Apagar Perfil</string>
    <string name="voltar_para_o_login">Voltar para o Login</string>
    <string name="password">Password</string>
    <string name="n_a">N/A</string>
    <string name="m_todo_de_pagamento">Método de Pagamento:</string>
    <string name="m_todo_de_expedi_o">Método de Expedição:</string>
    <string name="_0_00">0.00€</string>
    <string name="iva_total">IVA Total:</string>
    <string name="valor_total">Valor Total:</string>
    <string name="data">Data:</string>
    <string name="_01_01_2025">01/01/2025</string>
    <string name="favorito">Favorito</string>
    <string name="home">Home</string>
    <string name="favoritos">Favoritos</string>
    <string name="carrinho">Carrinho</string>
    <string name="faturas">Faturas</string>
    <string name="mensagens">Mensagens</string>
    <string name="gest_o">Gestão</string>
    <string name="perfil">Perfil</string>
    <string name="logout">LogOut</string>
    <string name="n_o_favorito">Não Favorito</string>
    <string name="search">Search</string>
    <string-array name="genero_array">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="quantidade">Quantidade:</string>
    <string name="estado">Estado:</string>
    <string name="transferir_fatura">Transferir Fatura</string>
    <string name="total_a_pagar">Total a pagar:</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="remover_dos_favoritos">Remover dos favoritos</string>
</resources>