<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:title="@string/home" />

        <item
            android:id="@+id/navFavoritos"
            android:title="@string/favoritos" />

        <item
            android:id="@+id/navCarrinho"
            android:title="@string/carrinho" />

        <item
            android:id="@+id/navFaturas"
            android:title="@string/faturas" />

        <item
            android:id="@+id/navMensagens"
            android:title="@string/mensagens" />

    </group>

    <item android:title="@string/gest_o">
        <menu>
            <item
                android:id="@+id/navPerfil"
                android:title="@string/perfil" />
            <item
                android:id="@+id/navLogOut"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>