<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgCapa"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/nome"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/quantidade"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDiminuir"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="−"
                android:backgroundTint="@color/green"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvQuantidade"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnAumentar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+"
                android:backgroundTint="@color/green"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/preco"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPreco"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:backgroundTint="#f54269"
        android:drawableRight="@android:drawable/ic_menu_delete" />
</LinearLayout>
